using UnityEngine;

public static class AnimHashes
{
    public static readonly int groundContact = Animator.StringToHash("groundContact");
    public static readonly int OnCurve = Animator.StringToHash("onCurve");
    public static readonly int LimbSpeed = Animator.StringToHash("limbSpeed");
    public static readonly int ArmFlexL = Animator.StringToHash("armFlexL");
    public static readonly int ArmExtendL = Animator.StringToHash("armExtendL");
    public static readonly int ArmFlexR = Animator.StringToHash("armFlexR");
    public static readonly int ArmExtendR = Animator.StringToHash("armExtendR");
    public static readonly int LeadLeg = Animator.StringToHash("leadLeg");
    public static readonly int Input = Animator.StringToHash("input");
    public static readonly int Right = Animator.StringToHash("right");
    public static readonly int Left = Animator.StringToHash("left");
    public static readonly int Launch = Animator.StringToHash("launch");
    public static readonly int UpInSet = Animator.StringToHash("upInSet");
    public static readonly int HorizSpeed = Animator.StringToHash("horizSpeed");

    public static readonly int shake = Animator.StringToHash("shake");
    public static readonly int fov = Animator.StringToHash("fov");
    public static readonly int startScreenAccessed = Animator.StringToHash("startScreenAccessed");
    public static readonly int onCurve = Animator.StringToHash("onCurve");

    public static readonly int land = Animator.StringToHash("land");
    public static readonly int cheer = Animator.StringToHash("cheer");
  
}